htdocs/theme/raw/sass/layout/_layout.scss
/*
 * Base structure
 */
body {
    max-width: 100%;

    .main {
        margin: 0 0 20px;
        padding-top: 30px;
        padding-bottom: 0;
        @include media-breakpoint-up(md) {
            padding-bottom:50px;
        }
    }
}

.main {
    max-width: 100%;
}

.content-main {
    @include media-breakpoint-up(md) {
        margin-left: 250px;
    }
}

.sidebar {
    padding-top: 0;
    @include media-breakpoint-up(md) {
        padding-top: 30px;
    }
}

// Expose a section of the page
.expose {
    background-color: theme-color("secondary");
    margin-bottom: 40px;
    margin-top: -109px;
    padding: 40px 0 20px;
}

.subpage {
    clear:both;
}

.wallpost {
    &:first-child {
        margin-top: 20px;
    }
    p {
        margin-bottom: 0;
    }
}

.columns3,
.columns4,
.columns5 {
    .wallpost .card-header {
        font-size: 12px;
        padding-right:40px;
        h4 {
            font-size: 12px;
        }
    }
}

.viewfooter {
    clear: both;
}

// Needed to clear the float when dropzone is visible
.blocktype {
  &.ui-draggable:before {
    display: none;
  }
}

.blockinstance {
  clear: both;
  .list-group{
    margin-bottom: 0;
  }
}

iframe {
    &.pdfiframe {
        width: 100%;
        height: 500px;
    }
    &.externalvideoiframe {
        width: 100%;
    }
    border: 0;
}
// Limit the width of external media
// to fit the width of the column
.mediaplayer-container iframe {
    width: 100%;
}

.progress-container {
    padding-top: 20px;
}

.section-import {
    padding-top: 30px;
}

.btn-group-top + .lead,
.btn-action-list + .view-description,
.btn-group-top + .view-description,
.toolbar + .lead {
    clear: both;
    margin-top: 15px;
    @include media-breakpoint-up(sm) {
        margin-top: 60px;
    }
}

.btn-action-list + .view-container,
.btn-group-top + .view-container {
    margin-top: 60px;
}

.view-container {
    margin-top: 30px;
    clear: both;
}

.view-description {
    margin-top: 15px;
    @include media-breakpoint-up(sm) {
        margin-top: 30px;
    }
    &.with-toolbar {
        margin-right: 20px;
    }
}

.postlist {
    margin-top: 20px;
}

.forumfooter {
    margin: 15px 0;
}

.dropdown-menu li span.nolink {
    padding: 3px 20px;
    display: block;
    white-space: nowrap;
}

body.presentation-iframe {
    header {
        display: none;
    }

    footer {
        display: none;
    }
}
// Online users

.peoplelistinfo {
    clear: both;
    .leftdiv {
        float: left;
        margin-bottom: 5px;
    }
    .rightdiv {
        margin-left: 60px;
        h3 {
            margin-top: 7px;
            padding-top: 5px;
        }
    }
}

// Pages and collections page header

.pageactions {
    position: absolute;
    top: 0px;

    .btn-group-vertical {
        position: fixed;
        right: -1px;
        margin-top: 30px;
        z-index: $zindex-fixed;
    }
}

.pageheader {
    background: $pageheader-bg;
    position: relative;

    .main {
        padding-top: 30px;
        padding-bottom: 50px;

        @include media-breakpoint-down(md) {
            padding-top: 20px;
            padding-bottom: 30px;
        }
    }
}

@for $i from 1 through 5 {
    .header.message-count-#{$i} {

        ~ .pageheader {
            margin-top: $navbar-height + ($i * 33px);

            @include media-breakpoint-down(sm) {
                margin-top: 0;
            }
        }

    }
}

.no-site-messages {
    ~ .pageheader {
        margin-top: $navbar-height;

        @include media-breakpoint-down(sm) {
            margin-top: 0;
        }
    }
}

// push in the right page margin to allow room for floating menu
.pageheader-actions,
.pageheader-actions + .main-content {
    padding-right: 50px;
}

// Profile page accept friends form
.pendingfriendscard {
    margin-top: 40px;
    padding-top: 30px;
    margin-bottom: 20px;

    @include media-breakpoint-down(md) {
        margin-top: -30px;
        padding-top: 0;
    }
}

